# Camera-Client

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
data/: camera_intrinsic.json
src/: Client.cpp  Client.h  Extern.cpp  Extern.h  cmakedefines.h.in  main.cpp  oldcode.txt
src/protos/: framedata.proto
src/utils/: compressutil.cpp  compressutil.h  coreutil.cpp  coreutil.h  protoutil.cpp  protoutil.h  timer.cpp  timer.h
